Fix z-index of modals
Just to make them appear in front of everything if user decides to click on a request row during the tour

--- a/App/View/css/custom-modal.css
+++ b/App/View/css/custom-modal.css
@@ -1,3 +1,7 @@
+.modal {
+    z-index: 9998;
+}
+
 .modal-title {
     color: #333;
 }
